# proto

./: .gitignore  .travis.yml  CONTRIBUTING.md  Cargo.toml  Makefile  Makefile.nanopb  README.md  build-cpp.sh  build.rs  package.json  rebar.config  requirements.in  requirements.txt  requirements_dev.txt  zxc
.github/workflow/: rust.yml
.github/workflows/: cpp.yml  erlang.yml  lint.yml  node.yml  python.yml  rust.yml
beacon/: Cargo.toml
beacon/src/: entropy.rs  error.rs  lib.rs  region.rs
config/: grpc_gen_gateway_config.config  grpc_gen_miner.config
helium-proto-rs/: build.rs
mapper/: Cargo.toml
mapper/src/: attach.rs  cell_attach.rs  cell_scan.rs  gps.rs  lib.rs  ports.rs  scan.rs  scan_beacon.rs
msg-signature/: Cargo.toml
msg-signature-macro/: Cargo.toml
msg-signature-macro/src/: lib.rs
msg-signature/src/: lib.rs
msg-verify/: Cargo.toml
msg-verify-macro/: Cargo.toml
msg-verify-macro/src/: lib.rs
msg-verify/src/: lib.rs
src/: blockchain_block.proto  blockchain_block_v1.proto  blockchain_channel_plan_v1.proto  blockchain_gossip_handler.proto  blockchain_ledger_entries_v2.proto  blockchain_ledger_entry_v2.proto  blockchain_ledger_subnetwork_v1.proto  blockchain_poc_core_v1.proto  blockchain_region_param_v1.proto  blockchain_routing_address.proto  blockchain_snapshot_handler.proto  blockchain_snapshot_v1.proto  blockchain_state_channel_v1.proto  blockchain_sync_handler.proto  blockchain_token_type_v1.proto  blockchain_txn.proto  blockchain_txn_add_gateway_v1.proto  blockchain_txn_add_network_v1.proto  blockchain_txn_add_subnetwork_v1.proto  blockchain_txn_assert_location_v1.proto  blockchain_txn_assert_location_v2.proto  blockchain_txn_coinbase_v1.proto  blockchain_txn_consensus_group_failure_v1.proto  blockchain_txn_consensus_group_v1.proto  blockchain_txn_create_htlc_v1.proto  blockchain_txn_dc_coinbase_v1.proto  blockchain_txn_gen_gateway_v1.proto  blockchain_txn_gen_price_oracle_v1.proto  blockchain_txn_gen_validator_v1.proto  blockchain_txn_handler.proto  blockchain_txn_multi_payment_v1.proto  blockchain_txn_network_rewards_v1.proto  blockchain_txn_oui_v1.proto  blockchain_txn_payment_v1.proto  blockchain_txn_payment_v2.proto  blockchain_txn_poc_receipts_v1.proto  blockchain_txn_poc_receipts_v2.proto  blockchain_txn_poc_request_v1.proto  blockchain_txn_price_oracle_v1.proto  blockchain_txn_redeem_htlc_v1.proto  (+59 more)
src/blockchain/data_credits/v1/: dc_payments_v1.proto  dcs_payment_v1.proto
src/blockchain/state_channel/v1/: state_channel_v1.proto
src/blockchain/transactions/: txn.proto
src/blockchain/transactions/v1/: txn_add_gateway_v1.proto  txn_assert_location_v1.proto  txn_consensus_group_v1.proto  txn_create_htlc_v1.proto  txn_gen_gateway_v1.proto  txn_rewards_v1.proto  txn_routing_v1.proto  txn_security_exchange_v1.proto  txn_state_channel_close_v1.proto  txn_token_burn_v1.proto
src/gateway_config/: local_gw_config_client_pb.erl
src/gateway_config_grpc_client/: grpc_gen_gateway_config.config
src/gateway_config_grpc_client/src/: gateway_config_grpc_client.app.src  local_gateway_config_client_pb.erl
src/hotspot_protocol/: longfi.proto
src/mapper/: attach_response.proto  gps_response.proto  modem_response.proto  scan_response.proto
src/miner/: local_miner_client_pb.erl
src/miner_grpc_client/: grpc_gen_miner.config
src/miner_grpc_client/src/: miner_grpc_client.app.src
src/service/: attach_response.proto  cdr.proto  chain_rewardable_entities.proto  config.proto  config_service.proto  downlink.proto  follower.proto  gateway.proto  gps_response.proto  iot_config.proto  local.proto  mapper.proto  mobile_config.proto  modem_response.proto  multi_buy.proto  packet_router.proto  packet_router_service.proto  packet_verifier.proto  poc_entropy.proto  poc_iot.proto  poc_lora.proto  poc_mobile.proto  router.proto  scan_response.proto  state_channel.proto  sub_dao.proto  transaction.proto  txn.proto  validator.proto  validator_state_channels.proto  verification_mapping.proto  verifier.proto
src/traits/: mod.rs  msg_verify.rs
src/types/: beacon.rs  entropy.rs  mod.rs  region.rs
src/types/beacon/: entropy.rs  mod.rs  region.rs
test/: assert_location_v2.spec.js  payment_v1.spec.js  payment_v2.spec.js  token_redeem_v1.spec.js  transfer_hotspot_v2.spec.js
test/service/: downlink.spec.js  poc_mobile.spec.js
