[package]
name = "helium-proto"
version = "0.1.0"
authors = ["Helium <info@helium.com>"]
edition = "2021"
license = "Apache-2.0"

[lib]
name = "helium_proto"
path = "src/lib.rs"

[workspace]
members = ["beacon"]

[workspace.dependencies]
# Pin to 0.10 to avoid issues with tls and solana dalek deps
tonic = "0.14"
bytes = "1"
prost = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tonic-prost = "0.14"
# tonic-build = { version = "0.14" }
# prost-build = "0.14"

[features]
default = []
services = ["tonic", "tonic-prost"]

[dependencies]
tonic = { workspace = true, optional = true }
tonic-prost = { workspace = true, optional = true }
bytes = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { version = "0.27", features = ["derive"] }
strum_macros = "0.27"

[build-dependencies]
tonic-prost-build = "0.14"
prost-build = "0.14"
