[package]
name = "helium-proto"
version = "0.1.0"
authors = ["Helium <info@helium.com>"]
edition = "2021"
license = "Apache-2.0"

[lib]
name = "helium_proto"
path = "src/lib.rs"

[workspace]
members = ["beacon"]

[workspace.dependencies]
tonic = "0.14"
bytes = "1"
prost = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tonic-prost = "0.14"

[features]
default = []
services = ["tonic", "tonic-prost"]
verify = ["services", "helium-crypto"]

[dependencies]
tonic = { workspace = true, optional = true }
tonic-prost = { workspace = true, optional = true }
bytes = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { version = "0.27", features = ["derive"] }
strum_macros = "0.27"
thiserror = "2.0.17"
base64 = "0.22.1"
helium-crypto = { version = "0.9.4", optional = true }

[build-dependencies]
tonic-prost-build = "0.14"
prost-build = "0.14"
