[package]
name = "helium-proto"
version = "0.1.0"
authors = ["Helium <info@helium.com>"]
edition = "2021"
license = "Apache-2.0"

[lib]
name = "helium_proto"
path = "src/lib.rs"

[workspace]
members = ["beacon", "msg-verify", "msg-verify-macro"]

[workspace.dependencies]
tonic = "0.14"
bytes = "1"
prost = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tonic-prost = "0.14"

[features]
default = []
services = ["tonic", "tonic-prost"]
verify = ["services", "helium-crypto", "msg-verify"]

[dependencies]
tonic = { workspace = true, optional = true }
tonic-prost = { workspace = true, optional = true }
bytes = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
strum = { version = "0.27", features = ["derive"] }
strum_macros = "0.27"
helium-crypto = { version = "0.9.1", optional = true }
msg-verify = { path = "msg-verify", optional = true }

[build-dependencies]
tonic-prost-build = "0.14"
prost-build = "0.14"
