[package]
name = "mapper_messages"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0", features = ["serde"] }
geo-types = "0"
hex = "0"
helium-proto = { path = "../", features = ["services"] }
h3o = "0"
lazy_static = "1"
nmea-parser = "0"
rust_decimal = "1"
serde =  {version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
modular-bitfield-msb = "0"

[dev-dependencies]
rand = "0"
